Repository pattern is added

--- a/src/ConsoleApp/ConsoleApp.csproj
+++ b/src/ConsoleApp/ConsoleApp.csproj
@@ -8,7 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="RepositoryPattern\Mappers\**" />
+    <EmbeddedResource Remove="RepositoryPattern\Mappers\**" />
+    <None Remove="RepositoryPattern\Mappers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="AbstractFactoryPattern\Implementations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.json" Version="9.0.5" />
+    <PackageReference Include="MongoDb.Driver" Version="3.4.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.5" />
   </ItemGroup>
 
 </Project>
